--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
   <!------Portfolio Section------->
   
   
-      <section id="porfolio">
+      <div id="porfolio">
         <ul>
             <li class="list active" data-filter="all">All</li>
             <li class="list" data-filter="mobile">Mobile</li>
@@ -388,7 +388,7 @@
             <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?shoe" alt="shoe image" ></div>
             <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?headphone" alt="headphone image" ></div>
         </div>
-    </section>
+    </div>
   
   
   <!------Portfolio Section------->
