--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
   <!------Portfolio Section------->
   
   
-      <div id="porfolio">
+      <div id="portfolio">
         <ul>
             <li class="list active" data-filter="all">All</li>
             <li class="list" data-filter="mobile">Mobile</li>
