--- a/index.html
+++ b/index.html
@@ -365,12 +365,12 @@
             <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?sonycamera" alt="camera image" ></div>
             <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?applewatch" alt="watch image" ></div>
             <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?shoe" alt="shoe image" ></div>
-            <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?latestheadphone" alt="headphone image" ></div>
+            <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?boatheadphone" alt="headphone image" ></div>
 
 
             <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?smartphone" alt="mobile image" ></div>
             <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?vintagecamera" alt="camera image" ></div>
-            <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?samsungwatch" alt="watch image" ></div>
+            <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?analogwatch" alt="watch image" ></div>
             <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?shoe" alt="shoe image" ></div>
             <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?airpods" alt="headphone image" ></div>
 
@@ -384,7 +384,7 @@
 
             <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?table" alt="mobile image" ></div>
             <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?telescope" alt="camera image" ></div>
-            <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?tablewatch" alt="watch image" ></div>
+            <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?alaramwatch" alt="watch image" ></div>
             <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?shoe" alt="shoe image" ></div>
             <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?headphone" alt="headphone image" ></div>
         </div>
