--- a/index.html
+++ b/index.html
@@ -364,28 +364,28 @@
             <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?mobile" alt="mobile image" ></div>
             <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?sonycamera" alt="camera image" ></div>
             <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?applewatch" alt="watch image" ></div>
-            <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?shoe" alt="shoe image" ></div>
+            <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?blackshoe" alt="shoe image" ></div>
             <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?fish" alt="headphone image" ></div>
 
 
             <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?smartphone" alt="mobile image" ></div>
             <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?vintagecamera" alt="camera image" ></div>
             <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?house" alt="watch image" ></div>
-            <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?shoe" alt="shoe image" ></div>
+            <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?whiteshoe" alt="shoe image" ></div>
             <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?airpods" alt="headphone image" ></div>
 
 
             <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?telephone" alt="mobile image" ></div>
             <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?camera" alt="camera image" ></div>
             <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?watch" alt="watch image" ></div>
-            <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?shoe" alt="shoe image" ></div>
+            <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?pinkshoe" alt="shoe image" ></div>
             <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?earphone" alt="headphone image" ></div>
 
 
             <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?table" alt="mobile image" ></div>
             <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?telescope" alt="camera image" ></div>
             <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?clock" alt="watch image" ></div>
-            <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?shoe" alt="shoe image" ></div>
+            <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?sportshoe" alt="shoe image" ></div>
             <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?headphone" alt="headphone image" ></div>
         </div>
     </div>
