--- a/index.html
+++ b/index.html
@@ -349,8 +349,11 @@
   
   <!------Portfolio Section------->
   
-  
-      <div id="portfolio">
+  <section id="portfolio">
+<div class="resume-heading">
+<h2>Resume</h2> <p>7 Years of Experience</p>
+</div>
+      <div>
         <ul>
             <li class="list active" data-filter="all">All</li>
             <li class="list" data-filter="mobile">Mobile</li>
@@ -389,6 +392,7 @@
             <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?headphone" alt="headphone image" ></div>
         </div>
     </div>
+    </section>
   
   
   <!------Portfolio Section------->
