--- a/index.html
+++ b/index.html
@@ -349,7 +349,6 @@
   
   <!------Portfolio Section------->
   
-  <section id="portfolio">
 <div class="resume-heading">
 <h2>Resume</h2> <p>7 Years of Experience</p>
 </div>
@@ -392,7 +391,7 @@
             <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?headphone" alt="headphone image" ></div>
         </div>
     </div>
-    </section>
+    </div>
   
   
   <!------Portfolio Section------->
