--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
   
   <!------Portfolio Section------->
   
-<div class="resume-heading">
+<section id="resume-heading">
+  <div>
 <h2>Resume</h2> <p>7 Years of Experience</p>
 </div>
       <div>
@@ -392,7 +393,7 @@
         </div>
     </div>
     </div>
-  
+  </section>
   
   <!------Portfolio Section------->
 
