--- a/index.html
+++ b/index.html
@@ -166,10 +166,8 @@
 
 <!------Resume Section------->
 
-<section id="resume">
-<div class="resume-heading">
-<h2>Resume</h2> <p>7 Years of Experience</p>
-</div>
+<section >
+<div id="resume">
 
 <div class="resume-flex">
 <div class="resume-text-details">
