--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
 
 <!------Resume Section------->
 
-<section >
-<div id="resume">
+<section id="resume" >
 
 <div class="resume-flex">
 <div class="resume-text-details">
@@ -348,9 +347,7 @@
   <!------Portfolio Section------->
   
 <section id="resume-heading">
-  <div>
-<h2>Resume</h2> <p>7 Years of Experience</p>
-</div>
+
       <div>
         <ul>
             <li class="list active" data-filter="all">All</li>
