--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
 
 
 
-
-<!------About Us Section------->
 <div class="body-2">
+<!------About Us Section------->
+
 <section id="about">
 <div class="about-me-section">
 <div class="empty-div">
-  <div class="about-me-img">
-    <img src="img/myImage.jpg" alt="">
-  </div>
+<div class="about-me-img">
+<img src="img/myImage.jpg" alt="">
+</div>
 </div>
 <div class="aboutMe">
 <p class="light-color">Frontend Developer</p>
@@ -128,9 +128,9 @@
 </section>
 
 <section class="tech-i-work-with">
-  <div class="tech-i-work-with-heading">
-  <h4>Technologies I Work With</h4>
-  </div>
+<div class="tech-i-work-with-heading">
+<h4>Technologies I Work With</h4>
+</div>
 
 <div class="coding-image">
 <div class="code-img">
@@ -167,7 +167,9 @@
 <!------Resume Section------->
 
 <section id="resume" >
-
+<div class="contact-heading">
+<h2>Contact</h2> <p>Get in Touch</p>
+</div>
 <div class="resume-flex">
 <div class="resume-text-details">
 <div class="resume-text-details-heading">
@@ -340,57 +342,58 @@
 </section>
 
 <!------Resume Section------->
-  
-  
-  
-  
-  <!------Portfolio Section------->
-  
-<section id="resume-heading">
-
-      <div>
-        <ul>
-            <li class="list active" data-filter="all">All</li>
-            <li class="list" data-filter="mobile">Mobile</li>
-            <li class="list" data-filter="camera">Camera</li>
-            <li class="list" data-filter="watch">Watch</li>
-            <li class="list" data-filter="shoe">Shoe</li>
-            <li class="list" data-filter="headphone">Headphone</li>
-        </ul>
-
-        <div class="product">
-            <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?mobile" alt="mobile image" ></div>
-            <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?sonycamera" alt="camera image" ></div>
-            <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?applewatch" alt="watch image" ></div>
-            <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?shoe" alt="shoe image" ></div>
-            <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?fish" alt="headphone image" ></div>
 
 
-            <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?smartphone" alt="mobile image" ></div>
-            <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?vintagecamera" alt="camera image" ></div>
-            <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?house" alt="watch image" ></div>
-            <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?whiteshoe" alt="shoe image" ></div>
-            <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?airpods" alt="headphone image" ></div>
 
 
-            <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?telephone" alt="mobile image" ></div>
-            <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?camera" alt="camera image" ></div>
-            <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?pencil" alt="watch image" ></div>
-            <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?school" alt="shoe image" ></div>
-            <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?earphone" alt="headphone image" ></div>
+<!------Portfolio Section------->
+
+<section id="portfolio">
+<div class="portfolio-heading">
+<h2>Portfolio</h2> <p>My Works</p>
+</div>
+  <div>
+    <ul>
+        <li class="list active" data-filter="all">All</li>
+        <li class="list" data-filter="mobile">Mobile</li>
+        <li class="list" data-filter="camera">Camera</li>
+        <li class="list" data-filter="watch">Watch</li>
+        <li class="list" data-filter="shoe">Shoe</li>
+        <li class="list" data-filter="headphone">Headphone</li>
+    </ul>
+
+    <div class="product">
+        <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?mobile" alt="mobile image" ></div>
+        <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?sonycamera" alt="camera image" ></div>
+        <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?applewatch" alt="watch image" ></div>
+        <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?shoe" alt="shoe image" ></div>
+        <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?fish" alt="headphone image" ></div>
 
 
-            <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?table" alt="mobile image" ></div>
-            <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?telescope" alt="camera image" ></div>
-            <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?clock" alt="watch image" ></div>
-            <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?boy" alt="shoe image" ></div>
-            <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?headphone" alt="headphone image" ></div>
-        </div>
+        <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?smartphone" alt="mobile image" ></div>
+        <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?vintagecamera" alt="camera image" ></div>
+        <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?house" alt="watch image" ></div>
+        <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?whiteshoe" alt="shoe image" ></div>
+        <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?airpods" alt="headphone image" ></div>
+
+
+        <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?telephone" alt="mobile image" ></div>
+        <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?camera" alt="camera image" ></div>
+        <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?pencil" alt="watch image" ></div>
+        <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?school" alt="shoe image" ></div>
+        <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?earphone" alt="headphone image" ></div>
+
+
+        <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?table" alt="mobile image" ></div>
+        <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?telescope" alt="camera image" ></div>
+        <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?clock" alt="watch image" ></div>
+        <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?boy" alt="shoe image" ></div>
+        <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?headphone" alt="headphone image" ></div>
     </div>
-    </div>
-  </section>
-  
-  <!------Portfolio Section------->
+</div>
+</section>
+
+<!------Portfolio Section------->
 
 
 
