--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
-<?php  include('inc/header.php') ?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>My CV</title>
+
+<link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="/img/fav.png">
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 <body>
 <div class="main-container">
+
 
 
 <!------Header and navbar toggle------->
@@ -40,15 +57,15 @@
 
 
 
-
-<!------About Us Section------->
 <div class="body-2">
+<!------About Us Section------->
+
 <section id="about">
 <div class="about-me-section">
 <div class="empty-div">
-  <div class="about-me-img">
-    <img src="img/myImage.jpg" alt="">
-  </div>
+<div class="about-me-img">
+<img src="img/myImage.jpg" alt="">
+</div>
 </div>
 <div class="aboutMe">
 <p class="light-color">Frontend Developer</p>
@@ -111,9 +128,9 @@
 </section>
 
 <section class="tech-i-work-with">
-  <div class="tech-i-work-with-heading">
-  <h4>Technologies I Work With</h4>
-  </div>
+<div class="tech-i-work-with-heading">
+<h4>Technologies I Work With</h4>
+</div>
 
 <div class="coding-image">
 <div class="code-img">
@@ -149,11 +166,10 @@
 
 <!------Resume Section------->
 
-<section id="resume">
-<div class="resume-heading">
-<h2>Resume</h2> <p>7 Years of Experience</p>
+<section id="resume" >
+<div class="contact-heading">
+<h2>Contact</h2> <p>Get in Touch</p>
 </div>
-
 <div class="resume-flex">
 <div class="resume-text-details">
 <div class="resume-text-details-heading">
@@ -326,6 +342,58 @@
 </section>
 
 <!------Resume Section------->
+
+
+
+
+<!------Portfolio Section------->
+
+<section id="portfolio">
+<div class="portfolio-heading">
+<h2>Portfolio</h2> <p>My Works</p>
+</div>
+  <div>
+    <ul>
+        <li class="list active" data-filter="all">All</li>
+        <li class="list" data-filter="mobile">Mobile</li>
+        <li class="list" data-filter="camera">Camera</li>
+        <li class="list" data-filter="watch">Watch</li>
+        <li class="list" data-filter="shoe">Shoe</li>
+        <li class="list" data-filter="headphone">Headphone</li>
+    </ul>
+
+    <div class="product">
+        <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?mobile" alt="mobile image" ></div>
+        <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?sonycamera" alt="camera image" ></div>
+        <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?applewatch" alt="watch image" ></div>
+        <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?shoe" alt="shoe image" ></div>
+        <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?fish" alt="headphone image" ></div>
+
+
+        <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?smartphone" alt="mobile image" ></div>
+        <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?vintagecamera" alt="camera image" ></div>
+        <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?house" alt="watch image" ></div>
+        <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?whiteshoe" alt="shoe image" ></div>
+        <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?airpods" alt="headphone image" ></div>
+
+
+        <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?telephone" alt="mobile image" ></div>
+        <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?camera" alt="camera image" ></div>
+        <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?pencil" alt="watch image" ></div>
+        <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?school" alt="shoe image" ></div>
+        <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?earphone" alt="headphone image" ></div>
+
+
+        <div class="itemBox" data-item="mobile"><img src="https://source.unsplash.com/400x400/?table" alt="mobile image" ></div>
+        <div class="itemBox" data-item="camera"><img src="https://source.unsplash.com/400x400/?telescope" alt="camera image" ></div>
+        <div class="itemBox" data-item="watch"><img src="https://source.unsplash.com/400x400/?clock" alt="watch image" ></div>
+        <div class="itemBox" data-item="shoe"><img src="https://source.unsplash.com/400x400/?boy" alt="shoe image" ></div>
+        <div class="itemBox" data-item="headphone"><img src="https://source.unsplash.com/400x400/?headphone" alt="headphone image" ></div>
+    </div>
+</div>
+</section>
+
+<!------Portfolio Section------->
 
 
 
