--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>My CV</title>
 
 <link rel="stylesheet" href="style.css">
-<link rel="icon" type="image/x-icon" href="/img/fav.png">
+<link rel="icon" type="image/x-icon" href="img/fav.png">
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
