--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>My CV</title>
 
 <link rel="stylesheet" href="style.css">
-<link rel="icon" type="image/x-icon" href="img/fav.png">
+<link rel="icon" type="image/x-icon" href="/img/fav.png">
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -431,7 +431,7 @@
 
 </div>
 </div>
-<form method="post" action="form.php">
+<form method="post" action="https://formspree.io/f/xrgvlynp">
 <div class="form">
 <div class="form-heading">
 <h3>How Can I Help You?</h3>
@@ -439,11 +439,11 @@
 <div class="contact-us-from">
 <div class="contact-input1">
 <input type="text" name="name" id="" placeholder="Full Name" required>
-<input type="email" name="email" id="" placeholder="Email Address" required>
+<input type="email" name="email" id="" placeholder="demo@gmail.com" required>
 <input type="text" name="topic" id="" placeholder="Subject" required>
 
 <div class="form-btn">
-<button><a href="https://wa.me/8683835266?text=Hey..Are%20you%20Available%20right%20now..!!" target="_blank">Send Message</a></button>
+<button><a>Send Message</a></button>
 </div>
 
 </div>
@@ -465,5 +465,6 @@
 
 </div>
 </div>
+
 </body>
 </html>
